Added color css and designed hr

--- a/Contactme.html
+++ b/Contactme.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sanjay's Contact</title>
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
   <body>
   <h3>My Contact Details</h3>
@@ -15,13 +16,13 @@
     </li>
   </ul>
   <form action="mailto:sanjaykv7@gmail.com" method="post" enctype="text/plain">
-    <label for="">Enter the details</label><br>
+    <label class="makebold" for=""><strong>Enter the details:</strong></label><br>
     <label for="">Your Name</label><br>
     <input type="text" name="yourname" value=""><br>
     <label for="">Your Email Address</label><br>
     <input type="email" name="your email" value=""><br>
     <label for="">Enter the message</label><br>
-    <textarea name="your message" rows="8" cols="80"></textarea><br>
+    <textarea name="your message" rows="8" cols="20"></textarea><br>
     <input type="submit" value="send">
   </form>
   </body>
