--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sanjay's Personal Site</title>
+  <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
@@ -11,8 +12,8 @@
     <tr>
       <td><img src="Image\My Image Circular.png" alt="Not supported"></td>
       <td>
-        <h1><a href="https://linkedin.com/in/sanjay-kv-922b8b31">SANJAY K V</a></h1>
-        <p><em><Strong>Tech Junkie</strong>, know a thing or two in long-term investment and love farming as a hobbie.</em></p>
+        <h1>SANJAY K V</h1>
+        <p><em><Strong>Tech Junkie</strong>, know a thing or two about long-term investment and love farming as a hobbie.</em></p>
         <p>I am a tech enthusiast, I &#10084; solving problems and I am a badminton player.</p>
       </td>
     </tr>
